<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    >


    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="132dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:radius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar1" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:minWidth="150dp"
        android:minHeight="8dp"
        android:progress="60"
        android:progressDrawable="@drawable/customprogress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/xpicon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/progressBar2"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/xp"
        app:tint="@color/yellow" />

    <ImageView
        android:id="@+id/hpicon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart"
        app:tint="@color/red" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:minWidth="150dp"
        android:minHeight="8dp"
        android:progress="60"
        android:progressDrawable="@drawable/customprogress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/xp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="50/100"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/health"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="50/100"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/xptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/xp"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <TextView
        android:id="@+id/coinstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="32dp"
        android:text="@string/currentCoins"
        android:textColor="@color/active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/coinstext"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coins" />

    <TextView
        android:id="@+id/user_level"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/Level"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />


    <TextView
        android:id="@+id/habbit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/habbits"
        android:textColor="@color/active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_level" />


    <!--    <ScrollView-->
<!--        android:id="@+id/scrollView"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->

<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHeight_percent="0.4"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/habbit"-->
<!--        app:layout_constraintVertical_bias="0.145">-->

<!--        &lt;!&ndash; Container for dynamic habit cards &ndash;&gt;-->
<!--        &lt;!&ndash;        <LinearLayout&ndash;&gt;-->
<!--        &lt;!&ndash;            android:id="@+id/habitContainer"&ndash;&gt;-->
<!--        &lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
<!--        &lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
<!--        &lt;!&ndash;            android:layout_marginStart="25dp"&ndash;&gt;-->
<!--        &lt;!&ndash;            android:layout_marginEnd="25dp"&ndash;&gt;-->
<!--        &lt;!&ndash;            android:orientation="vertical"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:layout_constraintHorizontal_bias="0.0"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:layout_constraintTop_toBottomOf="@+id/habbit"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:layout_constraintVertical_bias="0.102">&ndash;&gt;-->

<!--        &lt;!&ndash;            &lt;!&ndash; Other views like profile picture, progress bars, etc. &ndash;&gt;&ndash;&gt;-->

<!--        &lt;!&ndash;        </LinearLayout>&ndash;&gt;-->

<!--    </ScrollView>-->




</androidx.constraintlayout.widget.ConstraintLayout>
